compiler/tests/fail/arm-m4/adc_imm_too_large.jazz
export
fn main(reg u32 x) {
    reg bool c;
    c, x += x;
    x = #ADC(x, 0x0000caca, c);
    [x] = x;
}
